k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: nginx
  template:
    metadata:
      labels:
        component: nginx
    spec:
      volumes:
        - name: nginx-storage
          persistentVolumeClaim:
            claimName: nginx-persistent-volume-claim
      containers:
        - name: nginx
          image: nginx-alpine:1.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-storage
              mountPath: /usr/share/nginx/html
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c", "sh /usr/local/bin/start.sh" ]
            preStop:
              exec:
                command: [ "/bin/sh", "-c", "sh /usr/local/bin/stop.sh" ]
