k8s/nginx-load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-load-balancer-service
spec:
  type: LoadBalancer
  selector:
    component: nginx
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
